# Copaipy

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/capture/: event.hpp  master.hpp
include/common/: astronomy.hpp  camera.hpp  config.hpp  http_server.hpp  i2c.hpp  sensors.hpp  stopwatch.hpp  utility.hpp
include/display/: master.hpp  ui.hpp
include/sensors/: recorder.hpp  sensors.hpp
source/: main.cpp
source/capture/: event.cpp  master.cpp
source/common/: astronomy.cpp  camera.cpp  config.cpp  http_server.cpp  i2c.cpp  sensors.cpp  utility.cpp
source/display/: master.cpp  ui.cpp
source/sensors/: recorder.cpp  sensors.cpp
